@@ -77,7 +77,8 @@ typedef enum NMDeviceType
 {
 	DEVICE_TYPE_UNKNOWN = 0,
 	DEVICE_TYPE_802_3_ETHERNET,
-	DEVICE_TYPE_802_11_WIRELESS
+	DEVICE_TYPE_802_11_WIRELESS,
+	DEVICE_TYPE_802_11_MESH_OLPC
 } NMDeviceType;
 
 
