@@ -32,6 +32,7 @@
 #include "nm-device.h"
 #include "nm-device-802-3-ethernet.h"
 #include "nm-device-802-11-wireless.h"
+#include "nm-device-802-11-mesh-olpc.h"
 #include "NetworkManagerDialup.h"
 #include "nm-utils.h"
 #include "shvar.h"
