@@ -1,3 +1,10 @@
+2007-03-18  Dan Williams  <dcbw@redhat.com>
+
+	- Add a skeleton OLPC Mesh device
+	- Add notifiers when devices get added removed, because the OLPC mesh device
+		needs to find the ethX interface on the same physical device so they
+		can coordinate
+
 2007-03-17  Dan Williams  <dcbw@redhat.com>
 
 	Consolidate common code for updating and getting the hardware address
